[package]
name = "plantita_welcomes"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
imageproc = "0.23.0"
rusttype = "0.9.3"
reqwest = "0.11.22"

[features]
default = ["create_phrases", "create_welcome"]
create_phrases = []
create_welcome = []